--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, p {
 /* Приберає підкреслення з лінків*/
 
 .links {
-   text-decoration: none;
+    text-decoration: none;
 }
 
 /* Приберає крапки в списках та падинги */
@@ -55,7 +55,7 @@ img {
 }
 
 .container {
-  width: 1230px;
+  width: 1200px;
   margin: 0 auto;
   /* border: 1px solid tomato; */
   padding-left: 15px;
@@ -232,8 +232,9 @@ padding-bottom: 94px;
 }
 
 .benefits-card {
-  width: 270px;
+  width: calc( ( 100% - 90px ) / 4 );
   /* margin: 15px; */
+  /* border: 1px solid #2196f3; */
 }
 
 /* Стилізуємо секцию -чим ми займаэмося- */
@@ -250,9 +251,10 @@ padding-bottom: 94px;
   display: flex;
   justify-content: space-between;
 }
-.list.box > .photo {
- /* border: 1px solid tomato; */
-}
+
+/* .list.box > .photo {
+ border: 1px solid tomato;
+} */
 
 /* ====== Стилізуємо секцію -команда- ====== */
 
@@ -299,30 +301,30 @@ padding-bottom: 94px;
 /* ======= Стилізация футера =========== */
 
 .footer {
- 
-  background-color: var(--drk-bgrd-color);
+   background-color: var(--drk-bgrd-color);
+
 }
 .footer .container {
  padding: 60px 15px;
 }
 
-.links.adrs {
-  display:block;
-  margin-top: 20px;
-  margin-bottom: 9px;
-}
 
-.adrs {
+.links.adrs {
+  display:inline-block;
+  margin-top: 20px;
   font-style: normal;
+  margin-bottom: 9px;
   color: var(--text-color-on-drk-bgrd);
 }
+
+
 /* .adrs:hover,
 .adrs:focus {
   color: var(--accent-color);
 } */
 
 .mail {
-  display: block;
+  display: inline-block;
   font-style: normal;
   color: rgba(255, 255, 255, 0.6);
   margin-bottom: 9px;
@@ -380,7 +382,6 @@ padding-bottom: 94px;
 
 
 .categories-but {
-  /* margin-right: 8px; */
   margin-bottom: 34px;
   border: none;
   font-family: inherit;
@@ -413,18 +414,18 @@ padding-bottom: 94px;
 .list.project {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  
+  /* justify-content: space-between; */
+  margin: -15px;
   }
 
 .project-card {
     border-bottom: 1px solid var(--cards-border-color);
-    margin-bottom: 30px;
+    margin: 15px;
   }
 
 .name-project {
   color: var(--secondary-text-color);
-   border-left: 1px solid var(--cards-border-color);
+  border-left: 1px solid var(--cards-border-color);
   border-right: 1px solid var(--cards-border-color);
   font-weight: 700;
   font-size: 18px;
